--- a/ex_2_1/example_2.html
+++ b/ex_2_1/example_2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <!-- Metadata goes here -->
+    <title>Getty Code Camp Rocks!</title>
   </head>
   <body>
     <!-- Content goes here -->
