Added two paragraphs

--- a/ex_2_1/example_2.html
+++ b/ex_2_1/example_2.html
@@ -4,6 +4,7 @@
     <title>Getty Code Camp Rocks!</title>
   </head>
   <body>
-    <!-- Content goes here -->
+    <p>I was pretty lost at first, but now I'm getting it!</p>
+    <p>I'm going to be a master web page creator!</p>
   </body>
 </html>
