added header and ordered list

--- a/ex_2_1/example_2.html
+++ b/ex_2_1/example_2.html
@@ -7,5 +7,8 @@
       <h1>Confessions of a Novice Coder</h1>
     <p>I was pretty lost at first, but now I'm getting it!</p>
     <p>I'm going to be a master web page creator!</p>
+      <ol>Learn coding basics</ol>
+      <ol>Create web page</ol>
+      <ol>Take over the universe</ol>
   </body>
 </html>
