added strong font

--- a/ex_2_1/example_2.html
+++ b/ex_2_1/example_2.html
@@ -9,6 +9,6 @@
     <p>I'm going to be a master web page creator!</p>
       <ol>Learn coding basics</ol>
       <ol>Create web page</ol>
-      <ol>Take over the universe</ol>
+      <ol><strong>Take over the universe!</strong></ol>
   </body>
 </html>
